infra/k8s/authentication-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-mongo
  template:
    metadata:
      labels:
        app: authentication-mongo
    spec:
      containers:
        - name: authentication-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-mongo-clusterip-srv
spec:
  selector:
    app: authentication-mongo
  ports:
    - name: authentication-mongo-clusterip
      protocol: TCP
      port: 27017
      targetPort: 27017
