infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          args:
            [
              '--port',
              '4222',
              '--http_port',
              '8222',
              '--hb_interval',
              '5s',
              '--hb_timeout',
              '5s',
              '--hb_fail_count',
              '2',
              '--stan_debug=true',
              '--cluster_id',
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-clusterip-srv
spec:
  selector:
    app: nats
  ports:
    - name: nats-client-clusterip
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: nats-monitoring-clusterip
      protocol: TCP
      port: 8222
      targetPort: 8222
