infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-services-srv
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /authentication-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ticketing-clusterip-srv
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ticketing-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: ticketing-clusterip-srv
            port:
              number: 4200
